--- a/index.html
+++ b/index.html
@@ -2,33 +2,47 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>Bake Boo Analyzer</title>
+    <title>Bake Boo Analyzer - Educativo</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+    <div class="container">
+        <h1>📊 Bake Boo - Análise Estatística</h1>
 
-    <h1>📊 Bake Boo - Análise Estatística</h1>
+        <div class="buttons">
+            <button class="player" onclick="addResult('P')">Player</button>
+            <button class="banker" onclick="addResult('B')">Banker</button>
+            <button class="tie" onclick="addResult('T')">Tie</button>
+            <button class="reset" onclick="resetGame()">Reset</button>
+        </div>
 
-    <div class="buttons">
-        <button class="player" onclick="addResult('P')">Player</button>
-        <button class="banker" onclick="addResult('B')">Banker</button>
-        <button class="tie" onclick="addResult('T')">Tie</button>
-        <button class="reset" onclick="resetGame()">Reset</button>
-    </div>
+        <div class="history">
+            <h3>Histórico:</h3>
+            <div id="history"></div>
+        </div>
 
-    <div class="history">
-        <h3>Histórico:</h3>
-        <div id="history"></div>
-    </div>
+        <div class="stats">
+            <h3>Estatísticas:</h3>
+            <p id="stats"></p>
+        </div>
 
-    <div class="stats">
-        <h3>Estatísticas:</h3>
-        <p id="stats"></p>
-    </div>
+        <div class="suggestion">
+            <h3>Sugestão Estatística:</h3>
+            <p id="suggestion"></p>
+        </div>
 
-    <div class="suggestion">
-        <h3>Sugestão Estatística:</h3>
-        <p id="suggestion"></p>
+        <div class="bank">
+            <h3>Simulador de Banca:</h3>
+            <p>Banca inicial: <input type="number" id="bankInput" value="1000"> 
+            <button onclick="setBank()">Definir</button></p>
+            <p>Aposta por rodada: <input type="number" id="betInput" value="50"></p>
+            <p>Saldo atual: <span id="balance">1000</span></p>
+        </div>
+
+        <div class="chart-container">
+            <canvas id="resultsChart"></canvas>
+        </div>
     </div>
 
     <script src="script.js"></script>
